fix(templates): resolve iOS & macOS layout issues in Boilerplate #8894 (#8896)

--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/RootLayout.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/RootLayout.razor.scss
@@ -9,6 +9,8 @@
     background-color: $bit-color-background-primary;
     --app-inset-top: env(safe-area-inset-top);
     --app-inset-bottom: env(safe-area-inset-bottom);
+    --app-inset-left: env(safe-area-inset-left);
+    --app-inset-right: env(safe-area-inset-right);
 
     @include lt-md {
         height: 100%;
@@ -19,17 +21,29 @@
     height: var(--app-inset-top);
 }
 
+.inset-left {
+    height: 100%;
+    width: var(--app-inset-left);
+}
+
 .inset-main {
     width: 100%;
-    height: 100%;
+    display: flex;
+    min-height: 100%;
 
     @include lt-md {
         overflow: auto;
         position: relative;
         scroll-behavior: smooth;
         overscroll-behavior: none;
+        width: calc(100% - var(--app-inset-left) - var(--app-inset-right));
         height: calc(100% - var(--app-inset-top) - var(--app-inset-bottom));
     }
+}
+
+.inset-right {
+    height: 100%;
+    width: var(--app-inset-right);
 }
 
 .inset-bottom {
